# webserver

./: Cargo.toml  index.html  main.js  styles.css
src/: lib.rs  main.rs
static/root/: index.html
static/root/css/: examples.css
tests/: health_check.rs
